[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/main/hand-sprite.gd" type="Script" id=1]
[ext_resource path="res://src/main/hand.gd" type="Script" id=2]
[ext_resource path="res://src/main/FingerSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/main/hand-sheet.png" type="Texture" id=4]
[ext_resource path="res://src/main/WiggleTimer.tscn" type="PackedScene" id=6]

[node name="Hand" type="Control"]
margin_right = 80.0
margin_bottom = 80.0004
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandSprite" type="Sprite" parent="."]
position = Vector2( 23, 14 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 4
vframes = 3
frame = 5
script = ExtResource( 1 )

[node name="WiggleTimer" parent="HandSprite" instance=ExtResource( 6 )]

[node name="FingerSprite0" parent="." instance=ExtResource( 3 )]

[node name="FingerSprite1" parent="." instance=ExtResource( 3 )]

[node name="FingerSprite2" parent="." instance=ExtResource( 3 )]
